Changes in version 1.3.1 (2021-12-10)
+ Remove custom cache folder setting in vignette.

Changes in version 1.1.17 (2021-10-22)
+ Correct running of long tests.

Changes in version 1.1.16 (2021-10-19)
+ Update documentation.
+ Add ORCID for Alexis.

Changes in version 1.1.15 (2021-10-18)
+ Correct getUrlContent() to handle binary files.

Changes in version 1.1.14 (2021-10-17)
+ Factorize RCurl calls into global functions.
+ Disable warnings in calls to readLines() when using base::url().
+ Catch errors when trying to set locale.
+ Correct some tests.

Changes in version 1.1.13 (2021-10-12)
+ Make custom persistent the cache the default, following slowness with BiocFileCache in biodbHmdb.
+ Remove useless bib refs in vignettes/references.bib.
+ Add session info in vignettes.
+ Add ORCID, URL and BugReports.
+ Add an install section in main vignette.

Changes in version 1.1.12 (2021-10-09)
+ Switch back to custom implementation of persistent cache, following errors with BiocFileCache on Windows and also slowness with HMDB.

Changes in version 1.1.11 (2021-10-07)
+ Decompose test test.collapseRows() because of error on Bioconductor not reproduced on local computer.

Changes in version 1.1.10 (2021-09-30)
+ Disable UniProt request test: it fails (result is NA) for reason unknown only on Bioconductor Linux server during "R CMD check". Works fine on local computer.

Changes in version 1.1.9 (2021-09-28)
+ Correct handling of wrong URL with base::url().

Changes in version 1.1.8 (2021-09-28)
+ Correct bug of UniProt request on Windows.

Changes in version 1.1.7 (2021-09-23)
+ Ignore build folder when building package.
+ Update documentation.
+ Correct setting of R_ENVIRON_USER when building.

Changes in version 1.1.6 (2021-09-14)
+ Update documentation.

Changes in version 1.1.5 (2021-09-13)
+ Correct bug in return type of BiodbRequestScheduler::sendRequest().
+ Correct encoding of test reference filenames.

Changes in version 1.1.4 (2021-09-12)