@@ -1,3 +1,6 @@
+Changes in version 1.?.? (20..-..-..)
++ Correct ext pkg upgrade: do not generate C++ example files again.
+
 Changes in version 1.3.1 (2021-12-10)
 + Remove custom cache folder setting in vignette.
 
